--- a/projects/editor/src/lib/property/boolean-property/boolean-property.component.scss
+++ b/projects/editor/src/lib/property/boolean-property/boolean-property.component.scss
@@ -2,16 +2,6 @@
     display: block;
 }
 
-.simplified-wrapper {
-    display: flex;
-    align-items: center;
-    column-gap: 4px;
-}
-
-.override-indicator {
-    height: 32px;
-}
-
 .simple-checkbox {
-    flex-grow: 1;
+    margin: 8px 0;
 }
