--- a/projects/editor/src/lib/json-dialog/json-dialog.component.scss
+++ b/projects/editor/src/lib/json-dialog/json-dialog.component.scss
@@ -1,5 +1,3 @@
-// Todo Clean styling...
-
 :host {
     display: flex;
     flex-direction: column;
@@ -7,8 +5,6 @@
 }
 
 .mat-dialog-content {
-    display: flex;
-    flex-direction: column;
     flex-grow: 1;
 }
 
@@ -16,21 +12,15 @@
     margin: 0;
 }
 
-.mat-tab-group {
-    height: 100%;
-}
-
-.mat-form-field {
-    display: block;
-}
-
-.file-select {
+.json-field-wrapper {
     display: flex;
     column-gap: 8px;
     flex-grow: 1;
+    overflow: auto;
 }
 
-.file-select-field {
+.json-field {
+    display: block;
     flex-grow: 1;
 }
 
@@ -38,18 +28,15 @@
     align-self: flex-start;
 }
 
-.json-textarea {
+.text-editor {
     height: 100%;
-    resize: none;
-    font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono,
-        Courier New, monospace, serif;
 }
 
 form {
-    flex-grow: 1;
     display: flex;
     flex-direction: column;
     row-gap: 8px;
+    height: 100%;
 }
 
 :host ::ng-deep {
@@ -61,8 +48,6 @@ form {
     }
 
     .json-field {
-        flex-grow: 1;
-
         .mat-form-field-wrapper,
         .mat-form-field-infix,
         .mat-form-field-flex {
