--- a/projects/editor/src/lib/field-tree-item/field-tree-item.component.html
+++ b/projects/editor/src/lib/field-tree-item/field-tree-item.component.html
@@ -3,7 +3,7 @@
     [treeLevel]="treeLevel"
     [(isExpanded)]="isExpanded"
     [isExpandable]="fieldInfo.canHaveChildren"
-    [isActive]="isActiveField"
+    [isActive]="isActiveField$ | async"
     [hasOptions]="true"
     [optionsMenu]="optionsMenu"
     (isExpandedChange)="onSelected()"
