fix: minor fixes

--- a/projects/editor/src/lib/tree-item/tree-item.component.html
+++ b/projects/editor/src/lib/tree-item/tree-item.component.html
@@ -39,6 +39,7 @@
 </div>
 <div
     *ngIf="isExpandable"
+    class="children"
     [@bodyExpansion]="expansionState"
 >
     <ng-content select="[childrenContent]"></ng-content>
