refactor: changed isSimple to !treeMode

--- a/projects/editor/src/lib/main/main.component.html
+++ b/projects/editor/src/lib/main/main.component.html
@@ -127,6 +127,7 @@
             <editor-object-property
                 [target]="activeModel"
                 [property]="modelProperty"
+                [treeMode]="true"
                 [isExpanded]="true"
                 (targetChanged)="onActiveModelChanged($event)"
             >
