--- a/projects/editor/src/lib/property/input-property/input-property.component.html
+++ b/projects/editor/src/lib/property/input-property/input-property.component.html
@@ -1,5 +1,5 @@
 <editor-tree-item
-    *ngIf="!isSimplified; else simplifiedView"
+    *ngIf="treeMode; else simplifiedView"
     [treeLevel]="treeLevel"
     [hasOptions]="hasOptions"
     [optionsMenu]="optionsMenu"
