--- a/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.html
+++ b/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.html
@@ -78,7 +78,7 @@
                     class="editor-mat-menu-item"
                     mat-menu-item
                     *ngFor="let option of category.typeOptions"
-                    (click)="onAddChildField(option.name, option.customName)"
+                    (click)="onAddChildField(option.type)"
                 >
                     {{ option.displayName }}
                 </button>
@@ -101,7 +101,7 @@
                     class="editor-mat-menu-item"
                     mat-menu-item
                     *ngFor="let option of category.typeOptions"
-                    (click)="onReplaceField(option.name, option.customName)"
+                    (click)="onReplaceField(option.type)"
                 >
                     {{ option.displayName }}
                 </button>
