--- a/projects/editor/src/lib/field-tree-item/field-tree-item.component.html
+++ b/projects/editor/src/lib/field-tree-item/field-tree-item.component.html
@@ -68,7 +68,7 @@
                 class="editor-mat-menu-item"
                 mat-menu-item
                 *ngFor="let option of category.typeOptions"
-                (click)="onAddChildField(option.name, option.customName)"
+                (click)="onAddChildField(option.type)"
             >
                 {{ option.displayName }}
             </button>
@@ -91,7 +91,7 @@
                 class="editor-mat-menu-item"
                 mat-menu-item
                 *ngFor="let option of category.typeOptions"
-                (click)="onReplaceParentField(option.name, option.customName)"
+                (click)="onReplaceParentField(option.type)"
             >
                 {{ option.displayName }}
             </button>
