--- a/projects/editor/src/lib/main/main.component.html
+++ b/projects/editor/src/lib/main/main.component.html
@@ -164,7 +164,7 @@
                 class="editor-mat-menu-item"
                 mat-menu-item
                 *ngFor="let option of category.typeOptions"
-                (click)="onAddField(option.name, option.customName)"
+                (click)="onAddField(option.type)"
             >
                 {{ option.displayName }}
             </button>
