--- a/projects/editor/src/lib/main/main.component.html
+++ b/projects/editor/src/lib/main/main.component.html
@@ -12,7 +12,8 @@
             <span>Fields</span>
             <button
                 mat-icon-button
-                [matMenuTriggerFor]="addCategoryMenu"
+                [matMenuTriggerFor]="fieldOptionsMenu"
+                [matMenuTriggerData]="{ options: fieldOptions }"
             >
                 <mat-icon>add</mat-icon>
             </button>
@@ -25,7 +26,7 @@
                 <editor-field-tree-item
                     *ngFor="let field of activeForm.fields; trackBy: trackByFieldId"
                     [field]="field"
-                    [fieldCategories]="fieldCategories"
+                    [fieldOptions]="fieldOptions"
                     [isExpanded]="true"
                 >
                 </editor-field-tree-item>
@@ -149,28 +150,62 @@
     </div>
 </ng-template>
 
-<mat-menu #addCategoryMenu="matMenu">
-    <ng-container *ngFor="let category of fieldCategories">
-        <button
-            class="editor-mat-menu-item"
-            mat-menu-item
-            [matMenuTriggerFor]="addFieldMenu"
-        >
-            {{ category.name }}
-        </button>
-
-        <mat-menu #addFieldMenu="matMenu">
+<mat-menu #fieldOptionsMenu="matMenu">
+    <ng-template
+        matMenuContent
+        let-options="options"
+    >
+        <ng-container *ngFor="let option of options">
             <button
+                *ngIf="isCategoryOption(option)"
                 class="editor-mat-menu-item"
                 mat-menu-item
-                *ngFor="let option of category.typeOptions"
-                (click)="onAddField(option.type)"
+                [matMenuTriggerFor]="fieldCategoryOptionsMenu"
+                [matMenuTriggerData]="{ children: option.children }"
+                menu
             >
                 {{ option.displayName }}
             </button>
-        </mat-menu>
-    </ng-container>
+
+            <ng-container
+                *ngIf="isTypeOption(option)"
+                [ngTemplateOutlet]="fieldTypeOption"
+                [ngTemplateOutletContext]="option"
+            >
+            </ng-container>
+        </ng-container>
+    </ng-template>
 </mat-menu>
+
+<mat-menu #fieldCategoryOptionsMenu="matMenu">
+    <ng-template
+        matMenuContent
+        let-children="children"
+    >
+        <ng-container *ngFor="let child of children">
+            <ng-container
+                *ngIf="isTypeOption(child)"
+                [ngTemplateOutlet]="fieldTypeOption"
+                [ngTemplateOutletContext]="child"
+            >
+            </ng-container>
+        </ng-container>
+    </ng-template>
+</mat-menu>
+
+<ng-template
+    #fieldTypeOption
+    let-displayName="displayName"
+    let-type="type"
+>
+    <button
+        class="editor-mat-menu-item"
+        mat-menu-item
+        (click)="onAddField(type)"
+    >
+        {{ displayName }}
+    </button>
+</ng-template>
 
 <mat-menu #modelOptionsMenu="matMenu">
     <button
