--- a/projects/editor/src/lib/editor.component.scss
+++ b/projects/editor/src/lib/editor.component.scss
@@ -1,6 +1,88 @@
 :host {
-    display: block;
+    --add-form-width: 140px;
+    display: flex;
     height: 100%;
+
+    ::ng-deep {
+        .form-tab-group > .mat-tab-header {
+            margin-right: var(--add-form-width);
+
+            .mat-tab-label {
+                padding: 0;
+            }
+
+            .mat-tab-label-content,
+            .inner-tab-label-content {
+                height: 100%;
+                width: 100%;
+            }
+
+            .inner-tab-label-content {
+                display: inline-flex;
+                justify-content: space-between;
+                align-items: center;
+                column-gap: 8px;
+                padding: 0 16px;
+                box-sizing: border-box;
+            }
+        }
+    }
+}
+
+editor-sidebar {
+    min-width: 200px;
+    max-width: 40%;
+
+    &.left {
+        width: 20%;
+    }
+
+    &.right {
+        width: 25%;
+    }
+}
+
+.section-header-content {
+    flex-grow: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.form-view {
+    flex-grow: 1;
+    height: 100%;
+    position: relative;
+    overflow-x: auto;
+}
+
+.form-tab-group {
+    width: 100%;
+}
+
+.mat-tab-group {
+    height: 100%;
+}
+
+.add-form-btn-wrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: var(--editor-header-height);
+    width: var(--add-form-width);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.empty-view {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    row-gap: 16px;
 }
 
 .loading-view {
@@ -9,6 +91,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+    width: 100%;
     row-gap: 16px;
 }
 
