feat: add support for repeating section

--- a/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.html
+++ b/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.html
@@ -34,7 +34,7 @@
 
     <mat-menu #optionsMenu="matMenu">
         <button
-            *ngIf="fieldInfo.canHaveChildren"
+            *ngIf="fieldInfo.childrenConfig"
             class="editor-mat-menu-item"
             mat-menu-item
             [matMenuTriggerFor]="fieldOptionsMenu"
