--- a/projects/editor/src/lib/edit-field/styles/styles.component.html
+++ b/projects/editor/src/lib/edit-field/styles/styles.component.html
@@ -4,7 +4,7 @@
         <span>Style Self</span>
     </mat-button-toggle>
     <mat-button-toggle
-        [disabled]="!editField?._info.canHaveChildren"
+        [disabled]="!editField?._info.childrenConfig"
         [value]="1"
     >
         <mat-icon>groups</mat-icon>
