style: reduce options button size

--- a/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.html
+++ b/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.html
@@ -1,4 +1,7 @@
-<header *ngIf="isEditMode">
+<header
+    *ngIf="isEditMode"
+    class="editor-mat"
+>
     <div class="header-title">
         <span>{{ fieldInfo.name | fieldName : field.key }}</span>
         <ng-content></ng-content>
