--- a/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.scss
+++ b/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.scss
@@ -34,7 +34,7 @@ header {
 
 .options {
     display: flex;
-    justify-content: space-between;
+    column-gap: 4px;
     visibility: hidden;
 }
 
