--- a/projects/editor/src/lib/edit-field/styles/styles.component.scss
+++ b/projects/editor/src/lib/edit-field/styles/styles.component.scss
@@ -1,11 +1,10 @@
 :host {
     display: flex;
     flex-direction: column;
-    row-gap: 8px;
 }
 
 :host::ng-deep {
-    .styles-tab-group mat-tab-header {
+    .mat-tab-header {
         display: none;
     }
 
@@ -18,6 +17,25 @@
             grid-column-end: span 2;
         }
     }
+
+    .mat-tab-body-content {
+        padding: 8px;
+        box-sizing: border-box;
+    }
+}
+
+.toggle-group-wrapper {
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    padding: 8px;
+    box-sizing: border-box;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.mat-tab-group {
+    flex-grow: 1;
+    overflow: auto;
 }
 
 editor-chip-list-property {
