feat(github): add github link

--- a/projects/editor/src/lib/editor.component.html
+++ b/projects/editor/src/lib/editor.component.html
@@ -86,6 +86,13 @@
                 >
                     <mat-icon>add</mat-icon>Add Form
                 </button>
+                <a
+                    href="https://github.com/sesan07/formly-editor-app"
+                    target="_blank"
+                    mat-icon-button
+                >
+                    <mat-icon svgIcon="github"></mat-icon>
+                </a>
             </div>
         </ng-container>
     </div>
@@ -150,12 +157,20 @@
     <div class="empty-view">
         <h1>Formly Editor</h1>
         <button
+            class="add-form-btn"
             mat-flat-button
             color="primary"
             (click)="onAddForm()"
         >
             <mat-icon>add</mat-icon>Add Form
         </button>
+        <a
+            href="https://github.com/sesan07/formly-editor-app"
+            target="_blank"
+            mat-icon-button
+        >
+            <mat-icon svgIcon="github"></mat-icon>
+        </a>
     </div>
 </ng-template>
 
