style: use fill appearance for form fields

--- a/projects/editor/src/lib/edit-field/styles/style-option/style-option.component.html
+++ b/projects/editor/src/lib/edit-field/styles/style-option/style-option.component.html
@@ -1,4 +1,7 @@
-<mat-form-field *ngIf="!breakpoint.value || option.hasBreakpoints">
+<mat-form-field
+    *ngIf="!breakpoint.value || option.hasBreakpoints"
+    appearance="fill"
+>
     <mat-label>{{ option.name }}</mat-label>
     <mat-select
         [value]="selectedVariant"
