--- a/projects/editor/src/lib/property/chip-list-property/chip-list-property.component.html
+++ b/projects/editor/src/lib/property/chip-list-property/chip-list-property.component.html
@@ -24,7 +24,7 @@
 <ng-template #simplifiedView>
     <ng-container
         [ngTemplateOutlet]="formField"
-        [ngTemplateOutletContext]="{ showLabel: true }"
+        [ngTemplateOutletContext]="{ appearance: 'fill', showLabel: true }"
     ></ng-container>
 </ng-template>
 
