--- a/projects/editor/src/lib/property/input-property/input-property.component.html
+++ b/projects/editor/src/lib/property/input-property/input-property.component.html
@@ -26,7 +26,7 @@
 </editor-tree-item>
 
 <ng-template #simplifiedView>
-    <mat-form-field>
+    <mat-form-field appearance="fill">
         <mat-label>{{ property.name ? property.name : property.key }}</mat-label>
         <input
             matInput
