--- a/projects/editor/assets/styles/styles.scss
+++ b/projects/editor/assets/styles/styles.scss
@@ -91,8 +91,6 @@ editor-sidebar .resizing {
 
 .CodeMirror {
     border-radius: 4px;
-    padding: 4px;
-    box-sizing: border-box;
 }
 
 .CodeMirror-foldmarker {
@@ -143,4 +141,58 @@ formly-field {
 
 [hidden] {
     display: none !important;
+}
+
+// .cdk-drag-placeholder {
+//     height: 40px;
+//     line-height: 40px;
+//     text-align: center;
+//     padding: 0 10px;
+//     box-sizing: border-box;
+//     background-color: #ebebeb;
+//     border: dashed 2px #7a7a7a;
+//     border-radius: 4px;
+// }
+
+// .grid .cdk-drag-placeholder {
+//     display: none;
+// }
+
+// .cdk-drag-placeholder {
+//     display: none;
+// }
+
+.cdk-drag-handle {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    cursor: move;
+}
+
+.cdk-drag-preview {
+    outline: dashed 2px #7a7a7a;
+    border-radius: 4px;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drop-list.edit-mode {
+    min-height: 64px;
+    min-width: 48px;
+    padding: 8px;
+    box-sizing: border-box;
+    border: 2px solid transparent;
+}
+
+.cdk-drop-list-receiving.edit-mode,
+.cdk-drop-list-dragging.edit-mode {
+    background-color: #f7ffeb;
+    border: 2px solid #ebebeb;
+    border-radius: 4px;
+}
+
+.cdk-drop-list-dragging.edit-mode {
+    background-color: #beff5c;
 }
