--- a/projects/editor/src/lib/property/textarea-property/textarea-property.component.html
+++ b/projects/editor/src/lib/property/textarea-property/textarea-property.component.html
@@ -29,7 +29,7 @@
 </editor-tree-item>
 
 <ng-template #simplifiedView>
-    <mat-form-field>
+    <mat-form-field appearance="fill">
         <mat-label>{{ property.name ? property.name : property.key }}</mat-label>
         <textarea
             matInput
